# quectel-at-commands

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.rst  modules.rst  quectelatcommands.rst  requirements.txt
quectelatcommands/: __init__.py  quectelGnssATCommands.py  quectelModemATCommands.py  quectelSerial.py
