[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quectelatcommands"
version = "1.0.11"
description = "A Python package for Quectel AT Commands"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GNU General Public License v3.0" }
authors = [{ name = "Pierre Godicheau", email = "pgodicheau@scheiber.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = ["pyserial>=3.4", "click>=8.1.7"]

[project.optional-dependencies]
docs = ["Sphinx>=5.1.1", "sphinx-rtd-theme>=1.0.0", "tomli>=2.0.1"]
lint = ["black>=24.3,<25.0", "flake8>=5.0.0", "isort>=5.13.2"]
test = ["pytest>=8.2.1", "pytest-asyncio>=0.23.7", "pytest-cov>=3.0.0"]

[project.urls]
Homepage = "https://github.com/scheiber-sa/quectel-at-commands"
Documentation = "https://quectel-at-commands.readthedocs.io"
Bug-Tracker = "https://github.com/scheiber-sa/quectel-at-commands/issues"

[project.scripts]
quectelModemATCommandsCLI = "quectelatcommands.quectelModemATCommands:main"
quectelGnssATCommandsCLI = "quectelatcommands.quectelGnssATCommands:main"
