[metadata]
name = quectelatcommands
version = 0.1.0
author = Pierre Godicheau
author_email = pgodicheau@scheiber.com
description = A Python package for Quectel AT Commands
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scheiber-sa/quectel-at-commands
license = GNU General Public License v3.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pyserial>=3.4

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    quectelModemATCommandsCLI = quectelatcommands.quectelModemATCommands:main
